# command_system

./: .gitignore  Cargo.toml  README.md  test.json  test_vars.json
examples/: test_variables.rs  test_windows.rs
src/: examples.rs  lib.rs
src/builder/: chain_builder.rs  command_builder.rs  mod.rs
src/chain/: builder.rs  command_chain.rs  mod.rs
src/command/: composite_command.rs  executor.rs  mod.rs  shell_command.rs  traits.rs
src/examples/: mod.rs
src/logging/: console_logger.rs  file_logger.rs  manager.rs  mod.rs  strategies.rs  traits.rs
src/visitor/: log_visitor.rs  mod.rs  traits.rs
