[package]
name = "command_system"
version = "0.1.0"
edition = "2021"
authors = ["Nikolay Fedotov <nikolay@web-ap.ru>"]
description = "Библиотека выполнения комманд"
license = "MIT"

[dependencies]
tokio = { version = "1.44.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = "0.4"
colored = "2.0"
dotenv = "0.15"
shlex = "1.2"
uuid = { version = "1.7", features = ["v4"] }
async-trait = "0.1"
futures = "0.3"

[lib]
name = "command_system"
path = "src/lib.rs" 